k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: yolo-detector
  name: yolo-detector
  namespace: yolo-detector
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: yolo-detector
