k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
  labels:
    app: yolo-detector
  name: yolo-detector
  namespace: yolo-detector
spec:
  ingressClassName: nginx
  rules:
  - host: yolo.example.com
    http:
      paths:
      - backend:
          service:
            name: yolo-detector
            port:
              number: 8080
        path: /
        pathType: Prefix
